<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/layout_padding">

        <com.textus.textus.view.CustomEditText
            android:id="@+id/add_contact_edt_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/first"
            android:inputType="textPersonName"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/black"
            android:textColorHint="@color/edt_border"
            android:textSize="@dimen/edit_text_size" />

        <com.textus.textus.view.CustomEditText
            android:id="@+id/add_contact_edt_last"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/last"
            android:inputType="textPersonName"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/black"
            android:textColorHint="@color/edt_border"
            android:textSize="@dimen/edit_text_size" />

        <com.textus.textus.view.CustomEditText
            android:id="@+id/add_contact_edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/black"
            android:textColorHint="@color/edt_border"
            android:textSize="@dimen/edit_text_size" />

        <com.textus.textus.view.CustomEditText
            android:id="@+id/add_contact_edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/business_name"
            android:inputType="textPersonName"
            android:padding="@dimen/edit_text_padding"
            android:textColor="@color/black"
            android:textColorHint="@color/edt_border"
            android:textSize="@dimen/edit_text_size" />
    </LinearLayout>
</LinearLayout>