<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="@dimen/dialog_spacing">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/view_white_bg"
        android:orientation="vertical">

        <com.textus.textus.view.CustomClickTextView
            android:id="@+id/dialog_contact_btn_import"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dialog_item_padding"
            android:text="@string/import_contact"
            android:textColor="@color/btn_save"
            android:textSize="@dimen/dialog_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/edt_border" />

        <com.textus.textus.view.CustomClickTextView
            android:id="@+id/dialog_contact_btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dialog_item_padding"
            android:text="@string/add_new_contact"
            android:textColor="@color/btn_save"
            android:textSize="@dimen/dialog_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_spacing"
        android:background="@drawable/view_white_bg"
        android:orientation="vertical">

        <com.textus.textus.view.CustomClickTextView
            android:id="@+id/dialog_contact_btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dialog_item_padding"
            android:text="@string/cancel"
            android:textColor="@color/btn_save"
            android:textSize="@dimen/dialog_text_size"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>